--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Hello Extensions of the world from chrome",
   "description": "Base Level Extension",
-  "version": "1.0",
+  "version": "0.0.0",
   "action": {
     "default_popup": "popup.html",
     "default_icon": "hello_extensions.png"
@@ -10,5 +10,18 @@
   "background": {
     "service_worker": "assets/background.js",
     "type": "module"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["assets/browser-polyfill.min.js", "assets/content_script.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "matches": ["<all_urls>"],
+      "resources": ["assets/*.js"]
+    }
+  ],
+  "permissions": []
 }
