--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-react-browser-extension-template",
+  "description": "vite react browser extension template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,6 +8,7 @@
     "dev": "concurrently \"npm run dev:firefox\" \"npm run dev:chrome\"",
     "dev:firefox": "NODE_ENV=development vite build -w -c vite.config.firefox.ts --mode development",
     "dev:chrome": "NODE_ENV=development vite build -w -c vite.config.chrome.ts --mode development",
+    "build": "concurrently \"npm run build:firefox\" \"npm run build:chrome\"",
     "build:firefox": "NODE_ENV=production tsc -b && vite build -c vite.config.firefox.ts --mode production",
     "build:chrome": "NODE_ENV=production tsc -b && vite build -c vite.config.chrome.ts --mode production",
     "lint": "eslint ."
@@ -29,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "rollup": "^4.22.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
