fix improving rollup plugin browser manifest
- fix bug
- dynamic package.json to manifest.json field sync

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "author": {
+    "name": "viter",
+    "email": "viter@vite.com",
+    "url": "https://vite.dev/"
+  },
   "name": "vite-react-browser-extension-template",
-  "description": "vite react browser extension template",
+  "description": "vite react browser extension template from package.json",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -32,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "rollup": "^4.22.5",
+    "type-fest": "^4.26.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
