--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/webextension-polyfill": "^0.12.1",
+    "@types/yazl": "^2.4.5",
     "@vitejs/plugin-react": "^4.3.1",
+    "chalk": "^5.3.0",
     "concurrently": "^8.2.2",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
@@ -41,6 +43,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vite-plugin-static-copy": "^1.0.6"
+    "vite-plugin-static-copy": "^1.0.6",
+    "yazl": "^2.5.1"
   }
 }
